[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parsernaam"
version = "0.0.4"
description = "Name parser"
readme = "README.rst"
requires-python = ">=3.6"
license = { text = "MIT" }
authors = [
  { name = "Rajashekar Chintalapati", email = "rajshekar.ch@gmail.com" },
  { name = "Gaurav Sood", email = "gsood07@gmail.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]
keywords = ["parse", "names"]
dependencies = [
  "torch==2.0.1",
  "pandas==2.0.3",
  "joblib==1.3.2",
  "scikit-learn==1.3.0"
]

[project.optional-dependencies]
dev = ["check-manifest"]
test = ["coverage", "tox"]

[project.urls]
"Homepage" = "https://github.com/appeler/parsernaam"
"Repository" = "https://github.com/appeler/parsernaam"
"Bug Tracker" = "https://github.com/appeler/parsernaam/issues"

[project.scripts]
parse_names = "parsernaam.parse:main"

[tool.setuptools]
packages = ["parsernaam"]
include-package-data = true

[tool.setuptools.package-data]
parsernaam = [
  "notebooks/*.ipynb",
  "models/*.pt",
  "models/*.joblib"
]

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = ["tests"]
